:heavy_plus_sign: PACKAGE(dependencies): adding shortid

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "shortid": "^2.2.15",
     "tailwindcss": "^1.8.10"
   },
   "scripts": {
